zebra-rpc/src/methods/tests/snapshot/snapshots/get_block_template.coinbase_tx@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: coinbase_tx
---
{
  "V5": {
    "network_upgrade": "Nu5",
    "lock_time": {
      "Height": 0
    },
    "expiry_height": 1842421,
    "inputs": [
      {
        "Coinbase": {
          "height": 1842421,
          "data": [],
          "sequence": 0
        }
      }
    ],
    "outputs": [
      {
        "value": 15625000,
        "lock_script": "a9140c0bcca02f3cba01a5d7423ac3903d40586399eb87"
      },
      {
        "value": 21875000,
        "lock_script": "a9144e3f0d9a33a2721604cbae2de8d9171e21f8fbe487"
      },
      {
        "value": 25000000,
        "lock_script": "a91471e1df05024288a00802de81e08c437859586c8787"
      },
      {
        "value": 250000000,
        "lock_script": "a914adadadadadadadadadadadadadadadadadadadad87"
      }
    ],
    "sapling_shielded_data": null,
    "orchard_shielded_data": null
  }
}
