zebra-rpc/src/methods/tests/snapshot/snapshots/get_block_template_invalid-proposal@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
assertion_line: 385
expression: block_template
---
"io-error-kind-unexpectedeof-message-failed-to-fill-whole-buffer"
