zebra-rpc/src/methods/tests/snapshot/snapshots/get_block_template_invalid-proposal@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: block_template
---
"invalid proposal format: Io(\n    Error {\n        kind: UnexpectedEof,\n        message: \"failed to fill whole buffer\",\n    },\n)"
