zebra-rpc/src/methods/tests/snapshot/snapshots/get_block_template_long_poll.coinbase_tx@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: coinbase_tx
---
V5(
  network_upgrade: Nu5,
  lock_time: Height(Height(0)),
  expiry_height: Height(1842421),
  inputs: [
    Coinbase(
      height: Height(1842421),
      data: CoinbaseData([]),
      sequence: 0,
    ),
  ],
  outputs: [
    Output(
      value: 15625000,
      lock_script: Script("a9140c0bcca02f3cba01a5d7423ac3903d40586399eb87"),
    ),
    Output(
      value: 21875000,
      lock_script: Script("a9144e3f0d9a33a2721604cbae2de8d9171e21f8fbe487"),
    ),
    Output(
      value: 25000000,
      lock_script: Script("a91471e1df05024288a00802de81e08c437859586c8787"),
    ),
    Output(
      value: 250000000,
      lock_script: Script("a914adadadadadadadadadadadadadadadadadadadad87"),
    ),
  ],
  sapling_shielded_data: None,
  orchard_shielded_data: None,
)
